<resources>
    <string name="app_name" translatable="false">Quiz App</string>
    <string name="welcome" translatable="false">Welcome</string>
    <string name="please_enter_your_name" translatable="false">Please Enter Your Name</string>
    <string name="name" translatable="false">Name</string>
    <string name="start" translatable="false">Start</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="result" translatable="false">Result</string>
    <string name="image" translatable="false">image</string>
    <string name="congratulations" translatable="false">Congratulations</string>
    <string name="finish" translatable="false">Finish</string>
    <string name="next" translatable="false">Next</string>
    <string name="progress" translatable="false">%s/%s</string>
</resources>