<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:orientation="vertical"
    android:padding="16sp"
    tools:context=".Result">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/iv_trophy"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_trophy"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/congratulations"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="Anirban" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:gravity="center"
        android:textColor="@color/grey"
        android:textStyle="bold"
        tools:text="You Scored 0/10" />

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/finish"
        android:textColor="@color/design_default_color_primary"

        />
</LinearLayout>